--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
         <h1>Kalkulator Luas dan Keliling Segitiga</h1>
     </header>
     <main>
-        <img src="Assets/1853786887.jpg">
+        <img src="Assets/Rumus Luas Segitiga.png">
         <section class="input-section">
             <label for="tinggi-input">Tinggi Segitiga</label>
             <input type="number" id="tinggi-input" placeholder="0">
