--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,8 @@
 <body>
     <header>    
         <h1>Kalkulator Luas dan Keliling Segitiga</h1>
+
+        <h2>Luas Segitiga</h2>
     </header>
     <main>
         <img src="Assets/Rumus Luas Segitiga.png">
@@ -17,6 +19,27 @@
             <input type="number" id="tinggi-input" placeholder="0">
             <label for="alas-input">Alas Segitiga</label>
             <input type="number" id="tinggi-input" placeholder="0">
+            <section>   
+                <button>Go to Hitung Keliling</button>
+                <button>Hitung</button>
+                <button>Reset</button>
+            </section>
+        </section>
+    </main>
+</body>
+<body>
+    <header>
+        <h2>Keliling Segitiga</h2>
+    </header>
+    <main>
+        <img src="Assets/1853786887.jpg" alt="Keliling Segitiga">
+        <section class="input-section">
+            <label for="Sisi-input">Sisi Segitiga</label>
+            <input type="number" id="Sisi-input" placeholder="0">
+            <label for="Sisi-input">Sisi Segitiga</label>
+            <input type="number" id="Sisi-input" placeholder="0">
+            <label for="Sisi-input">Sisi Segitiga</label>
+            <input type="number" id="Sisi-input" placeholder="0">
             <section>   
                 <button>Go to Hitung Luas</button>
                 <button>Hitung</button>
